# rust

./: angreal.toml
{{ project_slug }}/: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Cargo.toml  README.md  clippy.toml  mkdocs.yml  plissken.toml
{{ project_slug }}/.angreal/: init.py  task_build.py  task_check.py  task_docs.py  task_tests.py  task_version.py
{{ project_slug }}/.flox/: .gitattributes  env.json
{{ project_slug }}/.flox/env/: manifest.toml
{{ project_slug }}/.github/workflows/: ci.yml  docs.yml  release.yml
{{ project_slug }}/crates/{{ project_slug }}-cli/: Cargo.toml
{{ project_slug }}/crates/{{ project_slug }}-cli/src/: main.rs
{{ project_slug }}/crates/{{ project_slug }}-core/: Cargo.toml
{{ project_slug }}/crates/{{ project_slug }}-core/src/: errors.rs
{{ project_slug }}/crates/{{ project_slug }}-core/src/tests/: mod.rs
{{ project_slug }}/crates/{{ project_slug }}-core/tests/: functional.rs  integration.rs
{{ project_slug }}/docs/: index.md
{{ project_slug }}/docs/api/: index.md
{{ project_slug }}/docs/getting-started/: installation.md  quickstart.md
