[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
version = "{{ initial_version }}"
edition = "2024"
rust-version = "{{ rust_version }}"
license = "{{ license }}"
authors = ["{{ author_name }} <{{ author_email }}>"]
repository = "https://github.com/{{ github_org }}/{{ project_slug }}"
description = "{{ project_description }}"

[workspace.dependencies]
# Async runtime
tokio = { version = "1.43", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
thiserror = "2.0"
anyhow = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# CLI
clap = { version = "4.5", features = ["derive", "env"] }

# Time
chrono = { version = "0.4", features = ["serde"] }

# Internal crates
{{ project_slug }}-core = { path = "crates/{{ project_slug }}-core" }

[profile.release]
lto = true
codegen-units = 1
strip = true
panic = "abort"

[profile.release-with-debug]
inherits = "release"
debug = true
strip = false
